--- a/Python/Untitled.ipynb
+++ b/Python/Untitled.ipynb
@@ -2,28 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, "
+      "qwer\n",
+      "1234\n",
+      "eqwrqweqw\n",
+      "21312312\n",
+      "{'q': '1', 'w': '2', 'e': '3', 'r': '4'}\n",
+      "312412312\n",
+      "wqeqweqw"
      ]
     }
    ],
    "source": [
-    "for i in range(15,77):\n",
-    "    if i%2==0:\n",
-    "        print(i, end=\", \")"
+    "a=[]\n",
+    "d1={}\n",
+    "d2={}\n",
+    "for i in range(0,4):\n",
+    "    a+=[input()]\n",
+    "for i in range(0,len(a[0])):\n",
+    "    d1[a[0][i]]=a[1][i]\n",
+    "    d2[a[1][i]]=a[0][i]\n",
+    "print(d)\n",
+    "for i in range(0,len(a[2])):\n",
+    "    print(d1[a[2][i]],end='')\n",
+    "print()\n",
+    "for i in range(0,len(a[3])):\n",
+    "    print(d2[a[3][i]],end='')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
